:sparkles: Naver Search API 정보 불러오기

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "_components" : "Components",
         "(route)": "Routes",
         "_server": "Server",
-        "_client": "Client"
+        "_client": "Client",
+        "_apis" : "API"
     }
 }
