--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
